Fixes algorithm field alignment.

--- a/src/main/webapp/WEB-INF/page/resources/design/algorithm.css
+++ b/src/main/webapp/WEB-INF/page/resources/design/algorithm.css
@@ -4,7 +4,7 @@
 	width: 726px;
 }
 
-.edas-content FIELDSET P TEXTAREA {
+.edas-content FIELDSET .edas-input-line TEXTAREA {
 	width: 500px;
 }
 
